# tal

./: .gitignore  CMakeLists.txt  Makefile  android_helpers.cpp  android_helpers.h  camera.cpp  camera.h  camera_fps.cpp  camera_rotating.cpp  camera_rotating.h  config.cpp  config.h  config.lua  config_default.h  data_reader.cpp  data_reader.h  file_utils.cpp  file_utils.h  fps_camera.cpp  fps_camera.h  game.cpp  game.h  game_file.cpp  gl_header.h  global.h  gui.cpp  gui.h  gui.hpp  gui_sprite.cpp  gui_sprite.h  log.cpp  log.h  lua.cpp  lua.h  lua_gui.cpp  lua_scene.cpp  main.cpp  map.cpp  map.h  matrix.cpp  (+39 more)
android/: README.txt  build.gradle  local.properties  settings.gradle
android/SDL2/: build.gradle
android/app/: build.gradle
android/app/jni/src/: Android.mk
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/lua/: build.gradle
android/lua/src/main/: AndroidManifest.xml
android/lua/src/main/res/values/: strings.xml
assets/: lua.lua
assets/defaults/: config.cfg
assets/defaults/shaders/: gui.v.glsl
assets/letters/: config.cfg  config.lua
assets/lua_lib/: cards.lua  main.lua  var_dump.lua
assets/shaders/: gui.f.glsl  map.f.glsl  model.f.glsl  sprite.f.glsl  triangle.v.glsl
assets/talisman/: battle.lua  config.lua  gui_helpers.lua  state.lua
assets/talisman/board/: 1-1-city.lua  1-15-woods.lua  1-20-crags.lua  1-3-hills.lua  1-5-woods.lua  1-6-hills.lua  2-4-desert.lua  2-8-castle.lua  3-8-pits.lua  list.lua
assets/talisman/map/: map.xcf
assets/talisman/models/: thief.mtl
game/: action.lua  board.lua  dice.lua  game.lua  gui_helpers.lua  hud.lua  other_players.lua  player.lua  state.lua
game/actions/: field-1-11-forest-land.lua  list.lua
game/assets/: font.xcf
game/board/: 1-1-city.lua  1-10-plains.lua  1-11-forest.lua  1-12-village.lua  1-13-fields.lua  1-14-graveyard.lua  1-15-woods.lua  1-16-sentinel.lua  1-17-hills.lua  1-18-chapel.lua  1-19-fields.lua  1-2-fields.lua  1-2-forest.lua  1-20-crags.lua  1-21-plains.lua  1-22-woods.lua  1-23-fields.lua  1-3-hills.lua  1-4-plains.lua  1-5-woods.lua  1-6-hills.lua  1-7-tavern.lua  1-8-fields.lua  1-9-ruins.lua  2-1-warlocks_cave.lua  2-10-black_knight.lua  2-11-hidden_valley.lua  2-12-hills.lua  2-13-cursed_glade.lua  2-14-runes.lua  2-15-chasm.lua  2-16-runes.lua  2-2-desert.lua  2-3-oasis.lua  2-4-desert.lua  2-5-temple.lua  2-6-woods.lua  2-7-runes.lua  2-8-castle.lua  2-9-portal.lua  (+18 more)
game/characters/: barbarian.lua  list.lua  thief.lua
letters/: cards.lua  config.lua  game.lua  gui_helpers.lua  letters.lua  players.lua  server.lua
lib/lua/: Makefile  lua  luac
lib/lua/android/: Android.mk  Application.mk
lib/lua/android/src/: luaconf.h
lib/selene/selene/: Selector.h
lua_lib/: class.lua  functions.lua  gui_helpers.lua  main.lua  players.lua  server.lua
shaders/: gui.f.glsl  gui.v.glsl  map.f.glsl  map.v.glsl  model.f.glsl  model.v.glsl  sprite.f.glsl  sprite.v.glsl  triangle.f.glsl  triangle.v.glsl
src/: camera.cpp  camera.h  camera_fps.cpp  camera_rotating.cpp  file_utils.cpp  game.cpp  game.h  game_file.cpp  game_file.h  gl_header.h  global.h  gui.cpp  gui.h  lua.cpp  lua.h  main.cpp  map.cpp  matrix.h  model.cpp  model_obj.cpp  net.cpp  renderer.cpp  renderer.h  reverse_it.h  scene.cpp  shader.cpp  shader.h  shared_data.cpp  shared_data.h  skybox.cpp  skybox.h  sprite.cpp  sprite_gui.cpp  stream_reader.cpp  stream_reader.h  texture.cpp  texture.h  time.cpp  time.h  widget.cpp  (+4 more)
talisman/: action.lua  journal.lua  player.lua
talisman/board/: 1-11-forest.lua  1-12-village.lua  1-13-fields.lua  1-14-graveyard.lua  1-17-hills.lua  1-18-chapel.lua  1-19-fields.lua  1-21-plains.lua  1-23-fields.lua  1-4-plains.lua  1-9-ruins.lua  2-12-hills.lua  2-16-runes.lua  2-2-desert.lua  2-5-temple.lua  2-7-runes.lua  3-1-v_fire.lua  3-2-w_den.lua  3-3-d_death.lua  3-5-p_peril.lua  3-6-mines.lua
talisman/characters/: barbarian.lua  elf.lua  genList.sh  thief.lua
talisman/models/: barbarian.mtl  elf.mtl
tools/: dataGen.py  game.html  memplot.sh  srv.py
tools/dataGenerator/: bin2cpp.py  dir2gamefile.py  generate_defaults.sh  generate_letters.sh
tools/fontGenerator/: CMakeLists.txt  main.cpp
tools/server/: app_globals.py  base.tpl  index.tpl  logger.py  network.tpl  socket_server.py  srv.py  srv_websocket.py  tree.py  tree.tpl  web_server.py
